--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "dependencies": {
     "lodash": "^4.6.1",
-    "material-ui": "^0.15.0-alpha.1",
+    "material-ui": "^0.14.4",
     "node-uuid": "^1.4.7",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
